# adb-devices-prometheus-exporter

./: Cargo.toml  LICENSE  README.md  install-plist-macos.sh
.github/workflows/: ci.yml
src/: builder.rs  cli.rs  device.rs  main.rs  metrics.rs
