[package]
name = "adb-devices-prometheus-exporter"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive"] }
derive_builder = "0.12.0"
lazy_static = "1.4.0"
regex = "1.10.2"
tokio = { version = "1.34.0", features = ["full"] } 
wait-timeout = "0.2.0"
